# aurora-eth-connector

./: .catalog-info.yaml  .gitignore  Cargo.toml  Makefile  Makefile.toml  README.md  build.sh  rust-toolchain
.env/: custom_example.env  development.env  local.env  mainnet.env  testnet.env
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: builds.yml  contract-analysis.yml  lints.yml  scheduled_lints.yml  tests.yml  update-contract.yaml
eth-connector/: .catalog-info.yaml  Cargo.toml  readme.md
eth-connector-tests/: .catalog-info.yaml  Cargo.toml
eth-connector-tests/src/: connector.rs  fee_management.rs  lib.rs  migration.rs  utils.rs
eth-connector/src/: admin_controlled.rs  connector.rs  connector_impl.rs  deposit_event.rs  errors.rs  fee.rs  fee_management.rs  lib.rs  log_entry.rs  migration.rs  proof.rs  storage_migration.rs  types.rs  wei.rs
eth-connector/src/fungible_token/: admin_controlled_impl.rs  core.rs  core_impl.rs  engine.rs  engine_impl.rs  event.rs  events.rs  macros.rs  metadata.rs  mod.rs  receiver.rs  statistic.rs  statistic_impl.rs  storage_impl.rs  storage_management.rs
eth-connector/src/types/: address.rs  balance.rs  fee.rs  gas.rs  mod.rs  wei.rs
fungible-token/: Cargo.toml
fungible-token-tests/: Cargo.toml
fungible-token/src/: core_impl.rs  event.rs  lib.rs  storage_impl.rs
res/: aurora-eth-connector-mainnet-migration-testnet.wasm  aurora-eth-connector-mainnet-migration.wasm  aurora-eth-connector-mainnet.wasm  aurora_eth_connector.wasm  aurora_eth_connector_migration.wasm
