[workspace.package]
authors = ["Aurora Labs <hello@aurora.dev>", "Evgeny Ukhanov <evgeny@aurora.dev>"]
edition = "2021"
version = "0.6.3"
homepage = "https://github.com/aurora-is-near/aurora-eth-connector"
repository = "https://github.com/aurora-is-near/aurora-eth-connector"
license = "CC0 1.0"

[workspace.dependencies]
aurora-engine-types = { git = "https://github.com/aurora-is-near/aurora-engine.git", tag = "3.3.1", default-features = false }
near-sdk = "4.1"
near-primitives = "0.17"
near-contract-standards = "4.1"
byte-slice-cast = "1"

[patch.crates-io]
parity-secp256k1 = { git = 'https://github.com/paritytech/rust-secp256k1', rev = "d05fd8e" }

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = true
lto = true
panic = "abort"
incremental = false
codegen-units = 1
rpath = false

[profile.dev]
# Due to a strange bug, setting this to 3 will cause test failures
opt-level = "z"
debug = false
debug-assertions = true
overflow-checks = true
lto = true
panic = "abort"
incremental = false
codegen-units = 1
rpath = false

[profile.bench]
# lto must be enabled in the bench profile as well for
# it to actually happen when running tests with --release
lto = true
opt-level = 3

[workspace]
resolver = "2"
members = [
    "eth-connector",
    "eth-connector-tests",
]
