[workspace.package]
authors = ["Aurora Labs <hello@aurora.dev>", "Evgeny Ukhanov <evgeny@aurora.dev>"]
edition = "2021"
version = "0.6.4"
homepage = "https://github.com/aurora-is-near/aurora-eth-connector"
repository = "https://github.com/aurora-is-near/aurora-eth-connector"
license = "CC0 1.0"

[workspace.dependencies]
aurora-engine-types = { version = "1", default-features = false }
borsh = "1"
near-sdk = { version = "5.9.0", features = ["unit-testing"] }
near-plugins = { git = "https://github.com/aurora-is-near/near-plugins", tag = "v0.4.1" }
near-contract-standards = "5.9.0"
cargo-near-build = "0.4.5"

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = true
lto = true
panic = "abort"
incremental = false
codegen-units = 1
rpath = false

[profile.dev]
# Due to a strange bug, setting this to 3 will cause test failures
opt-level = "z"
debug = false
debug-assertions = true
overflow-checks = true
lto = true
panic = "abort"
incremental = false
codegen-units = 1
rpath = false

[profile.bench]
# lto must be enabled in the bench profile as well for
# it to actually happen when running tests with --release
lto = true
opt-level = 3

[workspace]
resolver = "2"
members = [
    "eth-connector",
    "eth-connector-tests",
]
