[package]
name = "aurora-eth-connector-tests"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = ""
documentation = ""
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
publish = false
autobenches = false

[dev-dependencies]
aurora-eth-connector = { path = "../eth-connector" }
aurora-engine-types = { workspace = true, features = ["impl-serde"] }
near-sdk.workspace = true
near-primitives.workspace = true
near-contract-standards.workspace = true
byte-slice-cast.workspace = true

anyhow = "1.0"
near-units = "0.2"
tokio = { version = "1", features = ["full"] }
near-workspaces = "0.9"
hex = "0.4.3"
ethabi = "18.0"
rlp = { version = "0.5.0", default-features = false }
aurora-engine-migration-tool = { git = "https://github.com/aurora-is-near/aurora-engine-migration-tool.git", tag = "0.2.2" }
aurora-workspace-eth-connector = { git = "https://github.com/aurora-is-near/aurora-workspace", rev = "1d883cd9695fbd82e2c3f024d3f127769a48dfeb" }
aurora-workspace-utils = { git = "https://github.com/aurora-is-near/aurora-workspace", rev = "1d883cd9695fbd82e2c3f024d3f127769a48dfeb" }

[features]
migration-tests = []
