[package]
name = "aurora-eth-connector-tests"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = ""
documentation = ""
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
publish = false
autobenches = false

[dev-dependencies]
aurora-eth-connector = { path = "../eth-connector", features = ["integration-test"] }
aurora-engine-types = { workspace = true, features = ["impl-serde"] }
near-sdk.workspace = true
near-primitives.workspace = true
near-contract-standards.workspace = true
byte-slice-cast.workspace = true

anyhow = "1.0"
near-units = "0.2"
tokio = { version = "1", features = ["full"] }
near-workspaces = "0.9"
hex = "0.4.3"
ethabi = "18.0"
rlp = { version = "0.5.0", default-features = false }
aurora-engine-migration-tool = { git = "https://github.com/aurora-is-near/aurora-engine-migration-tool.git", rev = "e918ba2d317417b6569608171950238ca0a34b11" }
aurora-workspace-eth-connector = { git = "https://github.com/aurora-is-near/aurora-workspace", rev = "2d52b6c77583cfb85b07903a8fa23f5e90e6a407" }
aurora-workspace-utils = { git = "https://github.com/aurora-is-near/aurora-workspace", rev = "2d52b6c77583cfb85b07903a8fa23f5e90e6a407" }

[features]
migration-tests = []
