[package]
name = "aurora-eth-connector-tests"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = ""
documentation = ""
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
publish = false
autobenches = false

[dev-dependencies]
anyhow = "1.0"
aurora-engine-types = { workspace = true, features = ["impl-serde"] }
cargo-near-build.workspace = true
near-contract-standards.workspace = true
near-sdk.workspace = true
near-workspaces = "0.17.0"
tokio = { version = "1", features = ["full"] }

aurora-engine-migration-tool = { git = "https://github.com/aurora-is-near/aurora-engine-migration-tool.git", rev = "9b37ec2dc628bfa861840ce3d121ea4952faa4e2" }
aurora-workspace-eth-connector = { git = "https://github.com/aurora-is-near/aurora-workspace", rev = "c27d3e59523f2012b102d8780b8748942fe308e8" }
aurora-workspace-utils = { git = "https://github.com/aurora-is-near/aurora-workspace", rev = "c27d3e59523f2012b102d8780b8748942fe308e8" }

[features]
migration-tests = []
