[package]
name = "aurora-eth-connector"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "Aurora Eth Connector NEAR contract"
documentation = ""
readme = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
publish = false
autobenches = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
aurora-engine-types = { workspace = true, features = ["impl-serde", "borsh-compat"] }
byte-slice-cast = "1"
ethabi = { version = "18", default-features = false }
hex = "0.4"
near-contract-standards = "4.1"
near-sdk = "4.1"
rlp = "0.5"
serde = "1"
serde_json = "1"

[dev-dependencies]
rand = "0.8"

[features]
log = []
integration-test = ["log"]
# Currently feature `mainnet` used only for 
# Makefile.toml profiles to indicate basic features
mainnet = ["log"]
migration = ["log"]
