[package]
name = "aurora-eth-connector"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "Aurora Eth Connector NEAR contract"
documentation = ""
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
publish = false
autobenches = false

# fields to configure build with WASM reproducibility, according to specs
# in https://github.com/near/NEPs/blob/master/neps/nep-0330.md
[package.metadata.near.reproducible_build]
# docker image, descriptor of build environment
image = "sourcescan/cargo-near:0.13.2-rust-1.84.0"
# tag after colon above serves only descriptive purpose; image is identified by digest
image_digest = "sha256:b41cb89907f92b114da9e2be4e109bff30ab792c22ddcbd2a4cff8e340cb9acb"
# list of environment variables names, whose values, if set, will be used as external build parameters
# in a reproducible manner
# supported by `sourcescan/cargo-near:0.10.1-rust-1.82.0` image or later images
passed_env = []
# build command inside of docker container
# if docker image from default gallery is used https://hub.docker.com/r/sourcescan/cargo-near/tags,
# the command may be any combination of flags of `cargo-near`,
# supported by respective version of binary inside the container besides `--no-locked` flag
container_build_command = ["cargo", "near", "build", "non-reproducible-wasm", "--locked"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
aurora-engine-types = { workspace = true, features = ["impl-serde"] }
borsh.workspace = true
ethabi = { version = "18", default-features = false }
near-contract-standards.workspace = true
near-plugins.workspace = true
near-sdk.workspace = true
rlp = "0.6"
serde = "1"
serde_json = "1"

[features]
log = []
integration-test = ["log"]
migration = ["log"]
