[package]
name = "aurora-fungible-token-tests"
version = "0.1.0"
authors = ["Aurora Labs <hello@aurora.dev>"]
edition = "2021"
description = ""
documentation = ""
readme = true
homepage = "https://github.com/aurora-is-near/aurora-engine"
repository = "https://github.com/aurora-is-near/aurora-engine"
license = "GPL-3.0"
publish = false
autobenches = false

[dependencies]
aurora-fungible-token = { path = "../fungible-token" }

[features]
mainnet-test = []
testnet-test = []

