[package]
name = "aurora-fungible-token"
version = "0.1.0"
authors = ["Aurora Labs <hello@aurora.dev>"]
edition = "2021"
description = ""
documentation = ""
readme = true
homepage = "https://github.com/aurora-is-near/aurora-fungible-token"
repository = "https://github.com/aurora-is-near/aurora-fungible-token"
license = "CC0-1.0"
publish = false
autobenches = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = "4.0.0"
serde = "1"
serde_json = "1"

[dev-dependencies]

[features]
mainnet = []
testnet = []
